# molgen

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: diffusion_config.json  encoder_config.json
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/evaluate/: page.tsx
frontend/app/explore/: page.tsx
molgen/api/: app.py  inference.py  visualizer.py
molgen/data/: dataset.py  graph_builder.py  property_calculator.py
molgen/evaluation/: evaluator.py  metrics.py
molgen/models/: conditioning.py  denoiser.py  encoder.py
molgen/training/: train_diffusion.py  train_encoder.py
molgen/utils/: config.py  noise_schedule.py
tests/: test_api.py  test_dataset.py  test_diffusion.py  test_encoder.py  test_evaluation.py  test_graph_builder.py  test_noise_schedule.py  test_property_calculator.py  test_train_diffusion.py
